--- a/.github/workflows/publish-02-compat-test.yml
+++ b/.github/workflows/publish-02-compat-test.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   compat-matrix:
-    # run only if 01 succeeded and event is push(main) or release
+    # run only if 01 succeeded and base event was push(main) or release
     if: ${{ github.event.workflow_run.conclusion == 'success' && ((github.event.workflow_run.event == 'push' && github.event.workflow_run.head_branch == 'main') || github.event.workflow_run.event == 'release') }}
     runs-on: ubuntu-latest
     strategy:
@@ -84,7 +84,7 @@ jobs:
       - name: Run consumer on this JVM
         run: java -cp "${{ steps.pick.outputs.main }}:deps/*:." Runner
 
-  # Single non-matrix handoff to provide a clean, verified artifact set for 03
+  # single handoff to 03 (no matrix fan-out)
   handoff:
     needs: compat-matrix
     if: ${{ success() }}
