--- a/.github/workflows/publish-03-publish-snapshot.yml
+++ b/.github/workflows/publish-03-publish-snapshot.yml
@@ -12,8 +12,8 @@ permissions:
 
 jobs:
   deploy:
-    # run only if 02 succeeded and event is push(main) or release
-    if: ${{ github.event.workflow_run.conclusion == 'success' && ((github.event.workflow_run.event == 'push' && github.event.workflow_run.head_branch == 'main') || github.event.workflow_run.event == 'release') }}
+    # 03 is triggered by 02 (which already checked base event). Just require success.
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout at triggering commit
