--- a/.github/workflows/publish-01-build.yml
+++ b/.github/workflows/publish-01-build.yml
@@ -23,20 +23,71 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'        # baseline; bytecode=11 from your pom
+          java-version: '21'
           cache: maven
 
-      - name: Build once (light)
+      - name: Build once
         run: mvn -B -ntp -Dci=true clean verify
 
       - name: Attach sources & javadoc
+        run: mvn -B -ntp -Dci=true -DskipTests -Dskip-quality-gates=true -Ddoclint=none source:jar javadoc:jar
+
+      - name: Stage dist/ and deps/
         run: |
-          mvn -B -ntp -Dci=true -DskipTests -Ddoclint=none source:jar javadoc:jar
-          ls -l target/*.jar
+          mkdir -p dist deps
+          cp target/*.jar dist/
+          # Pull runtime deps into ./deps (no rebuild)
+          mvn -q -DincludeScope=runtime -DoutputDirectory=deps dependency:copy-dependencies
+          echo "Dist:" && ls -l dist || true
+          echo "Deps:" && ls -l deps || true
+
+      - name: Pick main jar
+        id: pick
+        run: |
+          MAIN=$(ls dist/*.jar | grep -v -- '-sources.jar' | grep -v -- '-javadoc.jar' | head -n1)
+          echo "main=$MAIN" >> "$GITHUB_OUTPUT"
+          echo "Main: $MAIN"
+
+      - name: Create and compile consumer Runner (once)
+        run: |
+          mkdir -p runner
+          cat > runner/Runner.java <<'JAVA'
+          import java.nio.file.*; import java.util.*; import java.util.stream.*;
+          import io.github.lemon_ant.globpathfinder.GlobPathFinder;
+          import io.github.lemon_ant.globpathfinder.PathQuery;
+          public class Runner {
+            public static void main(String[] args) {
+              PathQuery q = PathQuery.builder()
+                .baseDir(Paths.get(".")) .includeGlobs(Set.of("**/*"))
+                .excludeGlobs(Set.of()) .allowedExtensions(Set.of())
+                .onlyFiles(false) .maxDepth(Integer.MAX_VALUE).build();
+              try (Stream<Path> s = GlobPathFinder.findPaths(q)) {
+                System.out.println("OK " + s.limit(1).count());
+              }
+            }
+          }
+          JAVA
+          javac -cp "${{ steps.pick.outputs.main }}:deps/*:runner" -d runner runner/Runner.java
+          echo "Runner compiled:"
+          find runner -maxdepth 1 -type f -name '*.class' -ls || true
 
       - name: Upload dist (jar + sources + javadoc)
         uses: actions/upload-artifact@v4
         with:
           name: gpf-dist
-          path: target/*.jar
+          path: dist/*
+          if-no-files-found: error
+
+      - name: Upload runtime deps
+        uses: actions/upload-artifact@v4
+        with:
+          name: gpf-deps-runtime
+          path: deps/*
+          if-no-files-found: error
+
+      - name: Upload precompiled runner classes
+        uses: actions/upload-artifact@v4
+        with:
+          name: gpf-runner
+          path: runner/*
           if-no-files-found: error
