--- a/.github/workflows/publish-03-publish-snapshot.yml
+++ b/.github/workflows/publish-03-publish-snapshot.yml
@@ -1,4 +1,4 @@
-name: GPF 03 — Publish Snapshot
+name: 03-Publish Snapshot
 
 on:
   workflow_run:
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   deploy:
-    # 03 is triggered by 02 (which already checked base event). Just require success.
+    # Triggered by 02; just require success.
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
@@ -25,21 +25,21 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mkdir -p artifact
+          mkdir -p dist
           gh run download ${{ github.event.workflow_run.id }} \
             -R ${{ github.event.workflow_run.repository.full_name }} \
-            --name gpf-dist-verified --dir artifact
-          ls -l artifact
+            --name gpf-dist-verified --dir dist
+          ls -l dist
 
       - name: Pick files
         id: pick
         run: |
-          MAIN=$(ls artifact/*.jar | grep -v -- '-sources.jar' | grep -v -- '-javadoc.jar' | head -n1)
-          SRC=$(ls artifact/*-sources.jar | head -n1 || true)
-          DOC=$(ls artifact/*-javadoc.jar | head -n1 || true)
-          echo "main=$MAIN" >> $GITHUB_OUTPUT
-          echo "src=$SRC"   >> $GITHUB_OUTPUT
-          echo "doc=$DOC"   >> $GITHUB_OUTPUT
+          MAIN=$(ls dist/*.jar | grep -v -- '-sources.jar' | grep -v -- '-javadoc.jar' | head -n1)
+          SRC=$(ls dist/*-sources.jar | head -n1 || true)
+          DOC=$(ls dist/*-javadoc.jar | head -n1 || true)
+          echo "main=$MAIN" >> "$GITHUB_OUTPUT"
+          echo "src=$SRC"   >> "$GITHUB_OUTPUT"
+          echo "doc=$DOC"   >> "$GITHUB_OUTPUT"
 
       - name: Set up Java 21 (deploy env)
         uses: actions/setup-java@v4
@@ -52,7 +52,7 @@ jobs:
         id: version
         run: |
           VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Deploy EXACT artifacts (jar + sources + javadoc)
         run: |
