--- a/.github/workflows/publish-03-publish-snapshot.yml
+++ b/.github/workflows/publish-03-publish-snapshot.yml
@@ -81,7 +81,7 @@ jobs:
             fi
           fi
 
-          mvn -B -s dist/maven-settings.xml deploy:deploy-file \
+          mvn -B -ntp deploy:deploy-file \
             -DrepositoryId=github \
             -Durl="https://maven.pkg.github.com/lemon-ant/glob-path-finder" \
             -DpomFile=dist/pom.xml \
