Added code coverage

--- a/.github/workflows/publish-01-build.yml
+++ b/.github/workflows/publish-01-build.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Build once
         run: mvn -B -ntp -Dci=true clean verify
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./target/site/jacoco/jacoco.xml
+          fail_ci_if_error: true
+
       - name: Attach sources & javadoc
         run: mvn -B -ntp -Dci=true -DskipTests -Dskip-quality-gates=true -Ddoclint=none source:jar javadoc:jar
 
