--- a/.github/workflows/publish-01-build.yml
+++ b/.github/workflows/publish-01-build.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           files: ./target/site/jacoco/jacoco.xml
           fail_ci_if_error: true
+          token: 8f6972d4-c4cc-446a-a44d-4f7ccf87a4c3
 
       - name: Attach sources & javadoc
         run: mvn -B -ntp -Dci=true -DskipTests -Dskip-quality-gates=true -Ddoclint=none source:jar javadoc:jar
